2005-12-07  Lluis Sanchez Gual  <lluis@ximian.com>

	* ObjectReader.cs: Added null check in GetDeserializationType.
	Patch by Ben Maurer. Fixes bug #69666.

2005-12-01  Sebastien Pouliot  <sebastien@ximian.com>

	* BinaryFormatter.cs: Added a demand for SerializationFormatter on 
	Serialize method (to make some CAS test work correctly).

2005-05-26  Ben Maurer  <bmaurer@ximian.com>

	* CodeGenerator.cs: Move module creation to cctor to kill double
	checked locking and typeof locking.

2005-05-17  Lluis Sanchez Gual  <lluis@ximian.com>

	* CodeGenerator.cs: Don't generate debug info here.

2005-05-09  Lluis Sanchez Gual  <lluis@ximian.com>

	* ObjectWriter.cs:
	* CodeGenerator.cs: No need to add the class for inherited fields,
	since FieldInfo objects returned by the GetSerializableMembers
	method will already include the class name if needed.

2005-03-23  Lluis Sanchez Gual  <lluis@ximian.com>

	* BinaryCommon.cs: Added helper method for swapping bytes.
	* ObjectReader.cs:
	* ObjectWriter.cs: Implemented serialization of arrays of primitive
	types using Buffer.BlockCopy to create byffers of data that is written/
	read in a single call. It's much faster now.

2005-03-01  Lluis Sanchez Gual  <lluis@ximian.com>

	* BinaryCommon.cs: Found the meaning of two unknown binary elements.
	* CodeGenerator.cs: Derive generated classes from ClrTypeMetadata
	instead of TypeMetadata. Added writeTypes parameter to WriteTypeData().
	* ObjectWriter.cs: Use type and assembly names as keys for the type and
	assembly caches. This is needed since ISerializable types can provide
	fake type names (which are mapped to real types by a binder on
	deserialization).
	Implemented support for BinaryFormatter.TypeFormat.
	* BinaryFormatter.cs, MessageFormatter.cs: Implemented support for
	TypeFormat property.
	* ObjectReader.cs: Added support for objects serialized without
	member type information. This fixes bug #73114.
	If a binder return null, use the default way of loading the type.
